<resources>
    <string name="app_name">Vies</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_manage_travel">ManageTravelActivity</string>
    <string name="nuovo_album">Nuovo Album</string>
    <string name="travelName">Titolo</string>
    <string name="travelDateOut">Data</string>
    <string name="travelDateIn">Data di ritorno</string>
    <string name="location">Luogo</string>
    <string name="descrizione">Descrizione</string>
    <string name="myTravels">I miei viaggi:</string>
    <string name="title_activity_travel_detail">TravelDetailActivity</string>
    <string name="title_activity_main2">Login (temp)</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_map">Map</string>
</resources>
