<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.NewAlbumActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include   android:id="@+id/toolbar"
            layout="@layout/app_bar" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@color/bg">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/travelNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/travelNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/travelName"
                android:maxLength="@integer/textFieldChar" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/travelDateOutLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/travelDateInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/travelDateOut" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/travelLocationNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/travelLocationNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"

                android:maxLength="@integer/textFieldChar" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/travelDescrizioneLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/travelDescrizioneInput"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descrizione"
                android:inputType="textMultiLine"
                android:maxLength="@integer/textAreaChar"
                android:maxLines="10"
                android:minLines="1"
                android:scrollbars="vertical" />


        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/saveTravelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_done_white_36dp"/>

</android.support.design.widget.CoordinatorLayout>
